<resources>
    <string name="app_name">Acme Café</string>
    <string name="main_title">Acme Café</string>
    <string name="login_text">Log in</string>
    <string name="signup_text">Sign Up</string>
    <string name="continue_button">Continue</string>
    <string name="login_button">Login</string>
    <string name="user_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="realname_hint">Full Name</string>
    <string name="card_hint">Credit/Debit Card</string>
    <string name="NIF_hint">NIF</string>
    <string name="icon_description">coffee icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_button">Register</string>
    <string name="extradata_text" />
    <string name="extra_text">Additional Information</string>
    <string name="signup_dif_text">Login Information</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="title_activity_main_page">MainActivity</string>
    <string name="title_home">Menu</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_voucher">My Vouchers</string>
    <string name="voucher_tip">Consume 3 coffees for one free!\n Spend 100€ for 5% discount!</string>
    <string name="title_user">My Profile</string>
    <string name="voucher_title">My Vouchers</string>
    <string name="user_title">Profile</string>
    <string name="home_title">My Order</string>
    <string name="prod_name">Product Name</string>
    <string name="product_price">xx.xx€</string>
    <string name="confirm_order_butt">Confirm Order</string>
    <string name="register_text">Register</string>
    <string name="signin_text">Sign in</string>
    <string name="pass_warning_text">Password does not match</string>
    <string name="username_taken">Username already taken!</string>
    <string name="server_error">Something went wrong, try again later</string>
    <string name="prod_desc">Product Description</string>
    <string name="empty_cart">None</string>
    <string name="checkout_vouchers">Vouchers:</string>
    <string name="checkout_products">Products:</string>
    <string name="checkout_title">Checkout</string>
    <string name="add_button_description">add_item_button</string>
    <string name="remove_button_description">remove_item_button</string>
    <string name="use_tag">Use</string>
    <string name="vouch_name">Voucher Name</string>
    <string name="vouch_desc">Voucher Description</string>
    <string name="vouch_quant">x vouchers available</string>
    <string name="info_name">Information Name</string>
    <string name="total_coff_counter">Total Coffees</string>
    <string name="total_spent_count">Total Spent</string>
    <string name="coffee_until_discount">For next voucher</string>
    <string name="money_until_discount">For next voucher</string>
    <string name="order_date_temp">xx:xx  xx-xx-xxxx</string>
    <string name="get_orders_button">Get Previous Orders</string>
</resources>