<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_data"
    android:orientation="vertical">

    <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/server_error"
        android:textColor="#E40707"
        android:textSize="24sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/signup_dif_text" />

    <EditText
        android:id="@+id/editTextUser2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="text|textPassword" />

    <EditText
        android:id="@+id/editTextPassCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_pass_hint"
        android:inputType="text|textPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/extra_text" />

    <EditText
        android:id="@+id/editTextRealName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/realname_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextCreditDebit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/card_hint"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNIF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/NIF_hint"
        android:inputType="text" />

</LinearLayout>