<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.acme_industries.acmecaf.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_vouchers"
        android:name="com.acme_industries.acmecaf.ui.vouchers.VouchersFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_vouchers" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.acme_industries.acmecaf.ui.user.UserFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_user" />
</navigation>