<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <com.rishabhharit.roundedimageview.RoundedImageView
                android:id="@+id/vouch_img"
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:contentDescription="@string/home_title"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundedCorners="topLeft|bottomLeft"
                app:srcCompat="@drawable/main_icon" />

            <TextView
                android:id="@+id/vouch_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/vouch_name"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/vouch_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vouch_quant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/vouch_quant"
                android:textColor="@color/colorAccent2"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vouch_img" />

            <TextView
                android:id="@+id/vouch_desc"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserratregular"
                android:text="@string/vouch_desc"
                app:layout_constraintBottom_toTopOf="@+id/vouch_quant"
                app:layout_constraintStart_toEndOf="@+id/vouch_img"
                app:layout_constraintTop_toBottomOf="@+id/vouch_name" />

            <ImageView
                android:id="@+id/add_butt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/add_button_description"
                app:srcCompat="@drawable/add" />

            <ImageView
                android:id="@+id/rem_butt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/remove_button_description"
                app:srcCompat="@drawable/minus" />

            <TextView
                android:id="@+id/vouch_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratbold"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/rem_butt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_butt"
                android:textColor="@color/colorPrimaryDark" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>