<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <com.rishabhharit.roundedimageview.RoundedImageView
                android:id="@+id/prod_img"
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:contentDescription="@string/home_title"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundedCorners="topLeft|bottomLeft"
                app:srcCompat="@drawable/main_icon" />

            <TextView
                android:id="@+id/prod_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/prod_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/add_butt"
                app:layout_constraintStart_toEndOf="@+id/prod_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/prod_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/montserratregular"
                android:text="@string/product_price"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prod_img" />

            <ImageView
                android:id="@+id/rem_butt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/minus"
                android:contentDescription="@string/remove_button_description" />

            <ImageView
                android:id="@+id/add_butt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/add"
                android:contentDescription="@string/add_button_description"/>

            <TextView
                android:id="@+id/prod_quant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:fontFamily="@font/montserratbold"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/rem_butt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_butt" />

            <TextView
                android:id="@+id/prod_desc"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/prod_desc"
                app:layout_constraintBottom_toTopOf="@+id/prod_price"
                app:layout_constraintEnd_toStartOf="@+id/add_butt"
                app:layout_constraintStart_toEndOf="@+id/prod_img"
                app:layout_constraintTop_toBottomOf="@+id/prod_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>