<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ccc"
    android:paddingTop="5dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <ImageView
                android:id="@+id/prod_img"
                android:layout_width="105dp"
                android:layout_height="103dp"
                android:contentDescription="@string/home_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/main_icon" />

            <TextView
                android:id="@+id/prod_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prod_name"
                app:layout_constraintBottom_toTopOf="@+id/prod_price"
                app:layout_constraintEnd_toStartOf="@+id/prod_quant"
                app:layout_constraintStart_toEndOf="@+id/prod_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/prod_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/product_price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/prod_quant"
                app:layout_constraintStart_toEndOf="@+id/prod_img" />

            <ImageButton
                android:id="@+id/add_butt"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintBottom_toTopOf="@+id/prod_quant"
                app:layout_constraintEnd_toEndOf="@+id/prod_quant"
                app:layout_constraintStart_toStartOf="@+id/prod_quant"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/arrow_up_float" />

            <ImageButton
                android:id="@+id/rem_butt"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prod_quant"
                app:srcCompat="@android:drawable/arrow_down_float" />

            <TextView
                android:id="@+id/prod_quant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/rem_butt"
                app:layout_constraintStart_toStartOf="@+id/rem_butt"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>